carts/zig/null0.zig


// INPUT
/// Has the key been pressed? (tracks unpress/read correctly.)
pub extern "null0" fn key_pressed(key: Key) bool;
/// Is the key currently down?
pub extern "null0" fn key_down(key: Key) bool;
/// Has the key been released? (tracks press/read correctly.)
pub extern "null0" fn key_released(key: Key) bool;
/// Is the key currently up?
pub extern "null0" fn key_up(key: Key) bool;
/// Has the button been pressed? (tracks unpress/read correctly.)
pub extern "null0" fn gamepad_button_pressed(gamepad: i32, button: GamepadButton) bool;
/// Is the button currently down?
pub extern "null0" fn gamepad_button_down(gamepad: i32, button: GamepadButton) bool;
/// Has the button been released? (tracks press/read correctly.)
pub extern "null0" fn gamepad_button_released(gamepad: i32, button: GamepadButton) bool;
/// Get current position of mouse.
pub extern "null0" fn mouse_position() *Vector;
/// Has the button been pressed? (tracks unpress/read correctly.)
pub extern "null0" fn mouse_button_pressed(button: MouseButton) bool;
/// Is the button currently down?
pub extern "null0" fn mouse_button_down(button: MouseButton) bool;
/// Has the button been released? (tracks press/read correctly.)
pub extern "null0" fn mouse_button_released(button: MouseButton) bool;
/// Is the button currently up?
pub extern "null0" fn mouse_button_up(button: MouseButton) bool;

// SOUND
/// Load a sound from a file in cart.
pub extern "null0" fn load_sound(filename: [*:0]const u8) Sound;
/// Play a sound.
pub extern "null0" fn play_sound(sound: Sound, loop: bool) void;
/// Stop a sound.
pub extern "null0" fn stop_sound(sound: Sound) void;
/// Unload a sound.
pub extern "null0" fn unload_sound(sound: Sound) void;
/// Speak some text and return a sound. Set things to 0 for defaults.
pub extern "null0" fn tts_sound(text: [*:0]const u8, phonetic: bool, pitch: i32, speed: i32, throat: i32, mouth: i32, sing: bool) Sound;
/// Create Sfx sound.
pub extern "null0" fn sfx_sound(params: *const SfxParams) Sound;
/// Create Sfx parameters.
pub extern "null0" fn sfx_generate(type: SfxPresetType) *SfxParams;

// TYPES

// UTILITIES
/// Get system-time (ms) since unix epoch.
pub extern "null0" fn current_time() u64;
/// Get the change in time (seconds) since the last update run.
pub extern "null0" fn delta_time() f32;
/// Get a random integer between 2 numbers.
pub extern "null0" fn random_int(min: i32, max: i32) i32;
/// Get the random-seed.
pub extern "null0" fn random_seed_get() u64;
/// Set the random-seed.
pub extern "null0" fn random_seed_set(seed: u64) void;
